# REEase

./: .gitignore  app.py  pyproject.toml  replit.md  requirements.txt  summarizer.py
chrome-extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
dataset/: summary.docx
